# ticker_transfer

./: .dockerignore  .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  run.sh
migration/: env.py
migration/versions/: ad16b3046991_init.py  bf3918f09109_add_models.py
src/: main.py  utils.py
src/application/: logging_config.py  main.py  settings.py
src/application/dto/: tickers.py
src/application/managers/: entry_manager.py
src/application/settings/: settings.py
src/application/usecases/: tickers_create.py  tickers_update.py
src/data/models/: __init__.py
src/data/models/ticker/: ticker.py
src/data/repository/: entry_manager.py  tickers.py
src/domain/ctx/ticker/schemas/: update_ticker.py
src/domain/entities/: ticker.py
src/domain/exception/: base.py
src/domain/interfaces/: uow.py
src/domain/interfaces/repository/: entry_manager.py  tickers.py
src/infra/client/: deribit_client.py
src/infra/client/schemas/: tickers.py
src/infra/db/: manager.py  uow.py
