[tool.poetry]
name = "arch"
version = "0.1.0"
description = ""
authors = ["ludaNOFX  <kozhaniichelovek322@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
aiohttp = "^3.10.10"
alembic = "^1.13.3"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
docker = "^7.1.0"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
